# grpc-demo

./: CMakeLists.txt  build_proto.sh  elasticcdc.grpc.pb.cc  elasticcdc.grpc.pb.h  elasticcdc.pb.cc  elasticcdc.pb.h  elasticcdc.proto  greeter_client.cc  greeter_server.cc  readme.md
